# doco

./: .gitignore  .gitmodules  Cargo.toml  README.mkd  config.json
doc/proposal/: abstract.tex  evaluation.tex  introduction.tex  objectives.tex  proposal.tex  references.bib
doc/report/: abstract.tex  conclusion.tex  doco_flow.odg  evaluation.tex  future_work.tex  implementation.tex  introduction.tex  references.bib  related_work.tex  report.tex
examples/: BinarySearch.java  GuavaIsPrime.java  GuavaStrings.java  IsPositive.java  LogLikelihood.java  Silly.java  get_sign.c  is-positive.jpf  is_greater_than_42.c
klee/: command
klee-build-dir/: command
src/: daikon.rs  ftw.rs  jpf.rs  lib.rs  range.rs
src/daikon/: invariants.rs  mod.rs
src/jpf/: expression.rs  mod.rs
