[package]
name = "doco"
version = "0.1.0"
authors = ["Do Nhat Minh <mrordinaire@gmail.com>", "Renato Costa", "Shayan Mohammed"]
keywords = ["documentation"]
categories = ["documentation"]

[dependencies]
seer = { git = "https://github.com/dwrensha/seer/", rev = "8f4c77c61b05dd6155e7df9c88b3a923e6673d20" }
